--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-auth-session": "~3.5.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "~10.1.0",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "link": "^0.1.5",
     "react": "17.0.1",
